--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,6 @@ dependencies = [
 Homepage = "https://github.com/dawillcox/python_config_builder"
 "Bug Tracker" = "https://github.com/dawillcox/python_config_builder/issues"
 Documentation = "https://github.com/dawillcox/python_config_builder/blob/main/README.md"
-# Repository = "https://github.com/me/spam.git"
+Repository = "https://github.com/me/dawillcox/python_config_builder.git"
 # Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
 
