Renaming package from config_builder to combine_settings due to PyPI conflict modified:   README.md modified:   pyproject.toml renamed:    src/config_builder.py -> src/combine_settings.py modified:   tests/test_configs.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ requires = ["setuptools>=61.0",
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "config_builder"
-version = "1.0.1"
+name = "combine_settings"
+version = "1.0.0"
 authors = [
   { name="David Willcox", email="daw30410@yahoo.com" },
 ]
-description = "Build an application configuration from multiple files"
+description = "Combine application settings from multiple files"
 readme = "README.md"
 license = { file="LICENSE" }
 requires-python = ">=3.7"
@@ -26,9 +26,9 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/dawillcox/python_config_builder"
-"Bug Tracker" = "https://github.com/dawillcox/python_config_builder/issues"
-Documentation = "https://github.com/dawillcox/python_config_builder/blob/main/README.md"
-Repository = "https://github.com/me/dawillcox/python_config_builder.git"
+Homepage = "https://github.com/dawillcox/python_combine_settings"
+"Bug Tracker" = "https://github.com/dawillcox/python_combine_settings/issues"
+Documentation = "https://github.com/dawillcox/python_combine_settings/blob/main/README.md"
+Repository = "https://github.com/me/dawillcox/python_combine_settings.git"
 Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
 
